# asr-rnn-t

./: LICENSE  README.md  augmentation_demo.py  bpe.model  calc_metrics.py  demo.ipynb  inference.py  normalization_params.json  normalization_params_clean.json  normalization_params_other.json  pyproject.toml  requirements.txt  train.py
example/conformer-rnn-t-small-inference/: config.yaml  git_commit.txt  git_diff.patch
src/configs/: conformer_ctc.yaml  conformer_rnn_t.yaml  deepspeach.yaml  inference.yaml  train_clean.yaml  train_clean2.yaml  train_other.yaml
src/configs/dataloader/: dataloader_gpu.yaml
src/configs/datasets/: custom_dataset.yaml  librispeech.yaml  onebatchtest.yaml  train_clean.yaml
src/configs/metrics/: example.yaml  inference.yaml
src/configs/model/: conformer_ctc.yaml  conformer_rnn_t.yaml  conformer_rnn_t_s.yaml  (+2 more)
src/datasets/: base_dataset.py  collate.py  custom_dir_audio_dataset.py  librispeech_dataset.py
src/logger/: __init__.py  cometml.py  console.py  utils.py
src/loss/: __init__.py  rnnt_loss.py
src/metrics/: __init__.py  base_metric.py  cer.py  utils.py  wer.py
src/model/: __init__.py  conformer_ctc.py  conformer_rnn_t.py  deepspeech2.py  utils.py
src/text_encoder/: __init__.py  ctc_text_encoder.py  rnnt_text_encoder.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py
src/utils/: init_utils.py
tests/: test_conformer.py  test_conformer_block.py  test_conformer_rnn_t.py  test_convolution_module.py  test_feed_forward_module.py  test_mhsa_module.py  test_rnn_transducer.py
(+28 files in other folders)
